Menambahkan Struktur Semantic HTML ke dalam <body>

--- a/cv.html
+++ b/cv.html
@@ -5,5 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curriculum Vitae</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>I Putu Ngurah Rio Aditya Pratama</h1>
+      <p>Web Developer | Graphic Designer</p>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#biodata">Biodata</a></li>
+        <li><a href="#pendidikan">Pendidikan</a></li>
+        <li><a href="#skills">Skills</a></li>
+      </ul>
+    </nav>
+    <section id="biodata">
+      <h2>Biodata Diri</h2>
+      <p>Nama: Rio Aditya</p>
+      <p>Email: Rioaditya@gmail.com</p>
+      <p>TTL: Mataram,30 November 2003</p>
+      <p>No Telp:082147301535</p>
+    </section>
+    <section id="pendidikan">
+      <h2>Pendidikan</h2>
+      <ul>
+        <li>SDK Santo Antonius</li>
+        <li>SMP Negeri 6 Mataram</li>
+        <li>SMA Negeri 2 Mataram</li>
+        <li>Undiknas Denpasar</li>
+      </ul>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <p>HTML,UI UX</p>
+      <p>Networking</p>
+    </section>
+    <footer>
+      <p>
+        Ikuti saya di sosial media: <a href="https://www.instagram.com/ngrh_riyo?igsh=anNxNW1mZjhob2th&utm" target="blank" alt="Instagram">Instagram</a>,
+        <a href="https://www.facebook.com/rio.a.pratama.5815?mibextid=opq0tG" target="_blank" alt="Facebook">Facebook</a>
+      </p>
+    </footer>
+  </body>
 </html>
