--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Rio Aditya</title>
+
+    <style>
+      body {
+        font-family: 'Times New Roman', Times, serif, sans-serif;
+        background-color: rgb(0, 0, 0);
+        color: blueviolet;
+      }
+      header {
+        padding: 30px;
+        text-align: center;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      }
+      nav ul {
+        padding: 0;
+        text-align: center;
+        font-size: large;
+      }
+      nav ul li {
+        display: inline;
+        margin-right: 25px;
+      }
+      nav ul li a {
+        text-decoration: none;
+        color: rgb(59, 118, 191);
+      }
+      a:hover {
+        text-decoration: underline;
+        color: rgb(255, 240, 240);
+      }
+      section {
+        text-align: left;
+        color: antiquewhite;
+      }
+      footer {
+        padding: 10px;
+        text-align: center;
+        font-size: medium;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        color: rgb(0, 0, 0);
+        background-color: rgb(58, 60, 207);
+      }
+    </style>
   </head>
   <body>
     <header>
