Mempraktikan Box Model

--- a/cv.html
+++ b/cv.html
@@ -76,6 +76,10 @@
       }
       .skills {
         color: rgb(204, 209, 166);
+        border: 1px solid #ddd;
+        padding: 5px;
+        margin: 5px 0;
+        box-shadow: 0 0 3px #aaa;
       }
     </style>
   </head>
